deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d2
spec:
  selector:
    matchLabels:
      app: d2
  replicas: 3
  template:
    metadata:
      labels:
        app: d2
    spec:
      containers:
      - name: d2
        image: "gcr.io/google-samples/hello-app:2.0"
---
apiVersion: v1
kind: Service
metadata:
  name: d2
spec:
  type: ClusterIP
  selector:
    app: d2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
