gcp-lb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/v1beta1.FrontendConfig: fec
    networking.gke.io/managed-certificates: gcp-managed-cert-demo
spec:
  rules:
  - host: <MAIN_DOMAIN>
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ingress-nginx-nginx-ingress
            port:
              number: 80
